Removing devtools from requirements
Former-commit-id: cfd29e63caf5bfa7fd690ee09c149d0867d6d658

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,6 @@ Imports:
     GenomicFeatures,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
     limma,
-    devtools,
     genefilter,
     ConsensusClusterPlus,
     RColorBrewer,
@@ -100,7 +99,8 @@ Suggests:
     testthat,
     png,
     BiocStyle,
-    rmarkdown
+    rmarkdown,
+    devtools
 VignetteBuilder: knitr
 LazyData: true
 URL: https://github.com/BioinformaticsFMRP/TCGAbiolinks
