Giving user more control over survival plot
Former-commit-id: 4c5ecb83d2ab68a1d7c551fca0af35ec05c7767f [formerly d93027934cb102abd4f83be861ad3a0945cc494b]
Former-commit-id: 3c3f014a87403d346b9e7e20f32831a06fa8c902

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,6 +123,7 @@ importFrom(edgeR,topTags)
 importFrom(genefilter,varFilter)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggrepel,geom_text_repel)
+importFrom(ggthemes,theme_base)
 importFrom(gplots,greenred)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,dev.off)
