--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,8 +104,6 @@ importFrom(data.table,setDF)
 importFrom(data.table,setDT)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
-importFrom(devtools,load_all)
-importFrom(devtools,use_data)
 importFrom(dnet,dCommSignif)
 importFrom(dnet,dNetInduce)
 importFrom(dnet,dNetPipeline)
@@ -125,6 +123,7 @@ importFrom(edgeR,topTags)
 importFrom(genefilter,varFilter)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggrepel,geom_text_repel)
+importFrom(ggthemes,theme_base)
 importFrom(gplots,greenred)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,dev.off)
