--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,7 @@ Imports:
     coin,
     gplots,
     ggplot2,
+    ggthemes,
     survival,
     stringr (>= 1.0.0),
     IRanges,
@@ -58,7 +59,6 @@ Imports:
     GenomicFeatures,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
     limma,
-    devtools,
     genefilter,
     ConsensusClusterPlus,
     RColorBrewer,
@@ -100,7 +100,8 @@ Suggests:
     testthat,
     png,
     BiocStyle,
-    rmarkdown
+    rmarkdown,
+    devtools
 VignetteBuilder: knitr
 LazyData: true
 URL: https://github.com/BioinformaticsFMRP/TCGAbiolinks
