--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,6 @@ export(TCGAquery_SampleTypes)
 export(TCGAquery_Social)
 export(TCGAquery_clinic)
 export(TCGAquery_clinicFilt)
-export(TCGAquery_integrate)
 export(TCGAquery_maf)
 export(TCGAquery_subtype)
 export(TCGAvisualize_BarPlot)
@@ -165,6 +164,8 @@ importFrom(plyr,adply)
 importFrom(plyr,ddply)
 importFrom(plyr,rbind.fill)
 importFrom(plyr,summarize)
+importFrom(rvest,html_attr)
+importFrom(rvest,html_nodes)
 importFrom(scales,muted)
 importFrom(scales,percent)
 importFrom(sjPlot,sjp.setTheme)
@@ -181,4 +182,5 @@ importFrom(survival,coxph)
 importFrom(survival,survdiff)
 importFrom(survival,survfit)
 importFrom(tools,md5sum)
+importFrom(xml2,read_html)
 importFrom(xtable,xtable)
