updating to gdc
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/TCGAbiolinks@119490 bc3139a8-67e5-0310-9ffc-ced21a209358

Former-commit-id: 63e2ff777232cf8bdfff0d2137dde81bec77cb50 [formerly 60d020e18858b091af431500dcc486815db2ef4a]
Former-commit-id: 0fc8e19ce3074424a7bd4c9d94cc38d42e7510ae

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,10 +42,8 @@ export(TCGAvisualize_profilePlot)
 export(TCGAvisualize_starburst)
 export(getGDCprojects)
 export(isServeOK)
-export(parseClinicalXML)
 import(ComplexHeatmap)
 import(TxDb.Hsapiens.UCSC.hg19.knownGene)
-import(XML)
 import(ggplot2)
 import(graphics)
 import(gtable)
@@ -55,7 +53,6 @@ import(sjmisc)
 import(stats)
 import(stringr)
 import(utils)
-import(xml2)
 importFrom(Biobase,exprs)
 importFrom(Biobase,phenoData)
 importFrom(BiocGenerics,as.data.frame)
@@ -95,6 +92,7 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(affy,ReadAffy)
 importFrom(affy,rma)
 importFrom(biomaRt,getBM)
+importFrom(biomaRt,listDatasets)
 importFrom(biomaRt,useMart)
 importFrom(circlize,colorRamp2)
 importFrom(coin,pvalue)
