--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,6 @@ export(TCGAvisualize_PCA)
 export(TCGAvisualize_SurvivalCoxNET)
 export(TCGAvisualize_Tables)
 export(TCGAvisualize_meanMethylation)
-export(TCGAvisualize_mutation)
 export(TCGAvisualize_oncoprint)
 export(TCGAvisualize_profilePlot)
 export(TCGAvisualize_starburst)
@@ -173,7 +172,6 @@ importFrom(scales,percent)
 importFrom(sjPlot,sjp.setTheme)
 importFrom(sjPlot,sjp.stackfrq)
 importFrom(stringr,str_detect)
-importFrom(stringr,str_extract)
 importFrom(stringr,str_match)
 importFrom(stringr,str_match_all)
 importFrom(stringr,str_trim)
@@ -183,6 +181,7 @@ importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,survdiff)
 importFrom(survival,survfit)
+importFrom(tools,file_ext)
 importFrom(tools,md5sum)
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
