trying to fix travis
Former-commit-id: b8d5f2e2bd42048fb42ea57ee57ba9e96adde906 [formerly 1797945ac021b6fc2f06e4ce8e34e9d155c8516a]
Former-commit-id: ed381b546b621982a1be0c742f530f9ee0d4d4aa

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then Rscript -e 'install.packages("roxygen2", lib="/home/travis/R-bin/lib/R/library/")'; fi
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -q
-  - sudo apt-get install libc6 -y
+  - sudo apt-get install libc6 libc6-dev  -y
 r_github_packages:
   - jimhester/covr
 
