Will this work on windows?
Former-commit-id: 8efac3810e5a31fcd9335a3a7d8491f3f34dcc0f [formerly 7563af195ab271f9914d65d0f7625ebf2e23980d]
Former-commit-id: 2edc68a4b86ef6126af788a90f227e80a69327d7

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ importFrom(coin,wilcoxsign_test)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,switch_axis_position)
+importFrom(curl,curl_download)
 importFrom(data.table,":=")
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
