fixing to windows
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/TCGAbiolinks@119815 bc3139a8-67e5-0310-9ffc-ced21a209358

Former-commit-id: 00720397a50138779d8e6ae634fbddd9164c1cbc [formerly 9ff47ff9b0257441c1784648fea18a87cc88716a]
Former-commit-id: 9db49f1983f6af6de8d04ef1cdb458621c1ca23d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ import(TxDb.Hsapiens.UCSC.hg19.knownGene)
 import(ggplot2)
 import(graphics)
 import(gtable)
+import(httr)
 import(magrittr)
 import(readr)
 import(sjmisc)
