set version of packages needed
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/TCGAbiolinks@119900 bc3139a8-67e5-0310-9ffc-ced21a209358

Former-commit-id: e3a53278485030c7f43a3251ff252d034ae713dd [formerly 747aac89148d17a977801856a61516813f9b10e7]
Former-commit-id: dbc48b70be73cb8bf0073cdb7caa67081a67c85d

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,16 +27,16 @@ Imports:
     grDevices,
     graphics,
     GenomicRanges,
-    XML,
+    XML (>= 3.98.0),
     Biobase,
     affy,
     xtable,
     data.table,
     EDASeq (>= 2.0.0),
-    RCurl,
-    curl,
+    RCurl (>= 1.95.0),
+    curl  (>= 1.1.0),
     edgeR (>= 3.0.0),
-    jsonlite,
+    jsonlite (>= 1.0.0),
     plyr,
     knitr,
     biomaRt,
@@ -55,7 +55,7 @@ Imports:
     igraph,
     supraHex,
     S4Vectors,
-    ComplexHeatmap,
+    ComplexHeatmap (>= 1.10.2),
     R.utils,
     SummarizedExperiment,
     BiocGenerics,
@@ -75,7 +75,7 @@ Imports:
     cowplot,
     reshape2,
     gtable,
-    httr,
+    httr (>= 1.2.1),
     sjmisc,
     matlab,
     circlize,
