Adding minimal SummarizedExperiment version
Former-commit-id: a2a0a83d3c691920d9c638bae9f1a4006bf421e1

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,7 @@ Imports:
     S4Vectors,
     ComplexHeatmap (>= 1.10.2),
     R.utils,
-    SummarizedExperiment,
+    SummarizedExperiment (>= 1.2.3),
     BiocGenerics,
     GenomicFeatures,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
