Fixing prepare_clinical. There is some expections with colnames == NA.
Former-commit-id: f82525cab61b81fb7aa1bf24542ebee6b050e1c4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -164,6 +164,7 @@ importFrom(parallel,detectCores)
 importFrom(plyr,.)
 importFrom(plyr,adply)
 importFrom(plyr,ddply)
+importFrom(plyr,rbind.fill)
 importFrom(plyr,summarize)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_nodes)
