documentation of GRN
Former-commit-id: 06998f8fe4e69f795f583343b322eb3cd24a4554 [formerly b61833b7be59a7f1d890e77fee1da55de18c2240]
Former-commit-id: 226e4dbbfca5a8f8e01309735e98b2fb64aa4d94

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(TCGAanalyze_LevelTab)
 export(TCGAanalyze_Normalization)
 export(TCGAanalyze_Preprocessing)
 export(TCGAanalyze_SurvivalKM)
+export(TCGAanalyze_analyseGRN)
 export(TCGAanalyze_survival)
 export(TCGAdownload)
 export(TCGAprepare)
@@ -161,6 +162,7 @@ importFrom(limma,makeContrasts)
 importFrom(limma,toptable)
 importFrom(matlab,jet.colors)
 importFrom(parallel,detectCores)
+importFrom(parmigene,knnmi.cross)
 importFrom(plyr,.)
 importFrom(plyr,adply)
 importFrom(plyr,ddply)
