--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,6 @@ Imports:
     data.table,
     EDASeq (>= 2.0.0),
     RCurl (>= 1.95.0),
-    curl  (>= 1.1.0),
     edgeR (>= 3.0.0),
     jsonlite (>= 1.0.0),
     plyr,
@@ -57,7 +56,7 @@ Imports:
     S4Vectors,
     ComplexHeatmap (>= 1.10.2),
     R.utils,
-    SummarizedExperiment,
+    SummarizedExperiment (>= 1.2.3),
     BiocGenerics,
     GenomicFeatures,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
@@ -77,6 +76,7 @@ Imports:
     gtable,
     httr (>= 1.2.1),
     sjmisc,
+    parmigene,
     matlab,
     circlize,
     ggrepel
