--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ install:
 # Adapt as necessary starting from here
 
 build_script:
+  - travis-tool.sh install_bioc BiocStyle ComplexHeatmap knitr
   - travis-tool.sh install_deps
   - travis-tool.sh install_bioc_deps
 
