--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,10 @@ install:
 # Adapt as necessary starting from here
 
 build_script:
-  - travis-tool.sh install_deps
   - travis-tool.sh install_bioc_deps
+  - travis-tool.sh install_bioc BiocStyle
+  - travis-tool.sh install_deps
+
 
 test_script:
   - travis-tool.sh run_tests
