Adding missing packages
Former-commit-id: bfbbae0f4f413cafd8e29a4990395de926d47c7b

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,9 +14,8 @@ install:
 
 build_script:
   - travis-tool.sh install_bioc_deps
-  - travis-tool.sh install_bioc BiocStyle
+  - travis-tool.sh install_bioc BiocStyle GenomicRanges Biobase affy EDASeq edgeR biomaRt IRanges supraHex S4Vectors ComplexHeatmap SummarizedExperiment BiocGenerics GenomicFeatures TxDb.Hsapiens.UCSC.hg19.knownGene limma genefilter ConsensusClusterPlus
   - travis-tool.sh install_deps
-
 
 test_script:
   - travis-tool.sh run_tests
