--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,6 +168,7 @@ importFrom(plyr,adply)
 importFrom(plyr,ddply)
 importFrom(plyr,rbind.fill)
 importFrom(plyr,summarize)
+importFrom(rvest,"%>%")
 importFrom(rvest,html_attr)
 importFrom(rvest,html_nodes)
 importFrom(scales,muted)
