--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ os:
 #  - osx
 
 before_install:
+  - sudo apt-get update -q
+  - sudo apt-get install libc6
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then Rscript -e 'install.packages("nlme", lib="/home/travis/R-bin/lib/R/library/")'; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then Rscript -e 'install.packages("roxygen2", lib="/home/travis/R-bin/lib/R/library/")'; fi
 
