adding gcc path appveyor
Former-commit-id: 63ad268e28485c54825a011502d531107b8e20f7 [formerly 00c9d64e4f563e6e299f5dc43c73ff639e7773d8]
Former-commit-id: 170f720317562030e137f8a49220815a8d77bc14

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,7 @@ environment:
     - R_VERSION: devel
       R_ARCH: x64
       USE_RTOOLS: true
+      GCC_PATH: mingw_32
   _R_CHECK_FORCE_SUGGESTS_: false
 
 artifacts:
