--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,10 +26,10 @@ on_failure:
 
 environment:
   matrix:
-    - R_VERSION: devel
+    - R_VERSION: release
       R_ARCH: x64
       USE_RTOOLS: true
-      GCC_PATH: mingw_32
+
   _R_CHECK_FORCE_SUGGESTS_: false
 
 artifacts:
