Improving GDC connection
Former-commit-id: a351d92404f9092b5ad39d27521a9f3a7509e9f9

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,7 @@ Imports:
     RCurl (>= 1.95.0),
     edgeR (>= 3.0.0),
     jsonlite (>= 1.0.0),
+    curl (>= 2.1),
     plyr,
     knitr,
     biomaRt,
