Travis update, adding libc6-dev
Former-commit-id: 285ac0089c565476e8003b6c6029b3a937e2120c [formerly 9ddedcf946854c0d286f47fb348777fdc68b4b36]
Former-commit-id: f1105c6691a482a20ff84f979ec09a3d80066fca

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ os:
 
 before_install:
   - sudo apt-get update -q
-  - sudo apt-get install libc6
+  - sudo apt-get install libc6 libc6-dev
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then Rscript -e 'install.packages("nlme", lib="/home/travis/R-bin/lib/R/library/")'; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then Rscript -e 'install.packages("roxygen2", lib="/home/travis/R-bin/lib/R/library/")'; fi
 
